--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -53,7 +53,7 @@
 }
 
 .footer-social .icon.spotify:hover {
-  color: #1DB954;
+  color: #0ea142;
 }
 
 .footer-social .icon.youtube:hover {
@@ -69,7 +69,7 @@
 }
 
 .footer-social .icon.facebook:hover {
-  color: #1877F2;
+  color: #1675d3;
 }
 
 /* ───── bottom bar ───── */
