--- a/frontend/src/styles/ProductsList.css
+++ b/frontend/src/styles/ProductsList.css
@@ -14,9 +14,10 @@
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 12px;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 6px rgba(6, 127, 12, 0.1);
   background-color: #fff;
   transition: transform 0.2s;
+  position: relative;
 }
 
 .product-card:hover {
@@ -31,21 +32,12 @@
 .product-card p {
   margin-bottom: 15px;
   font-weight: bold;
-  color: #f28ab2;
+  color:black; ;
 }
 
-.product-card button {
-  padding: 8px 16px;
-  background-color: #f28ab2;
-  border: none;
-  color: white;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.product-card button:hover {
-  background-color: #e27099;
+.product-image-link {
+  display: block;
+  margin-bottom: 10px;
 }
 
 .product-image {
@@ -53,5 +45,4 @@
   height: 200px;
   object-fit: cover;
   border-radius: 8px;
-  margin-bottom: 10px;
 }
