--- a/frontend/src/styles/Checkout.css
+++ b/frontend/src/styles/Checkout.css
@@ -60,12 +60,15 @@
     padding: 12px 20px;
     border-radius: 6px;
     cursor: pointer;
-    width: 100%;
+    width: 200px;
+    margin-left: 200px;
     font-size: 16px;
   }
   
   .checkout-btn:disabled {
-    background-color: #888;
+
     cursor: not-allowed;
   }
-  
+  .checkout-btn:hover:not(:disabled) {
+     background-color: #297a18;
+  }
